--- a/Knights of Valor/Knights of Valor.vcxproj
+++ b/Knights of Valor/Knights of Valor.vcxproj
@@ -120,6 +120,11 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Animation.h" />
+    <ClInclude Include="Graphics.h" />
+    <ClInclude Include="Gui.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
