finished pathing class.

--- a/Knights of Valor/Knights of Valor.vcxproj
+++ b/Knights of Valor/Knights of Valor.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="Gui.cpp" />
     <ClCompile Include="Knight.cpp" />
+    <ClCompile Include="Pathing.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Sprite.cpp" />
   </ItemGroup>
