--- a/Knights of Valor/Knights of Valor.vcxproj.filters
+++ b/Knights of Valor/Knights of Valor.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Knight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Pathing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
